--- a/style/all.css
+++ b/style/all.css
@@ -72,7 +72,7 @@ img {
 }
 
 /* about------------------ */
-.about-img {
+/* .about-img {
     position:absolute;
     clip:rect(20px 200px 100px 30px);
-}
+} */
